Add notification icon && triggered notification window

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -659,7 +659,6 @@ a {
   align-items: center;
   margin: 18rem auto;
 }
-
 @media only screen and (max-width: 480px) {
   .posts-wrapper,
   .form-wrapper,
@@ -792,10 +791,11 @@ a {
   height: 40px;
 }
 .user-icon:hover,
-.logout-icon {
+.logout-icon:hover,
+.notification-icon:hover {
   cursor: pointer;
   transform: scale(1.4);
-  transition: all 0.5s ease-in;
+  transition: all 0.3s ease-in;
 }
 
 .google-signin-container {
@@ -822,7 +822,8 @@ a {
 }
 
 /* user drop-down */
-.user-container {
+.user-container,
+.notification-container {
   position: relative;
 }
 .user-drop-down {
